Redo operator tweaking fails after transforming with constrained axis #64669

Closed
opened 2019-05-15 22:02:27 +02:00 by William Reynish · 9 comments

System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38

Blender Version
Broken: version: 2.80 (sub 64), branch: master, commit date: 2019-05-15 17:31, hash: fe8f0758c6
Worked: I am pretty sure this worked a month or two ago?

Short description of error
Redo operator tweaking fails for the constrained axes after a transform

Exact steps for others to reproduce the error

  1. Enable the Move tool
  2. Click and drag on the X axis arrow (red)
  3. Open the redo panel that says 'Move'
  4. Attempt to tweak the Z or Y axes.

These properties will fail to be adjusted.

**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: Intel(R) Iris(TM) Plus Graphics 640 Intel Inc. 4.1 INTEL-12.8.38 **Blender Version** Broken: version: 2.80 (sub 64), branch: master, commit date: 2019-05-15 17:31, hash: `fe8f0758c6` Worked: I am pretty sure this worked a month or two ago? **Short description of error** Redo operator tweaking fails for the constrained axes after a transform **Exact steps for others to reproduce the error** 1. Enable the Move tool 2. Click and drag on the X axis arrow (red) 3. Open the redo panel that says 'Move' 4. Attempt to tweak the Z or Y axes. These properties will fail to be adjusted.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

#64668 was marked as duplicate of this issue

#64668 was marked as duplicate of this issue
Campbell Barton was assigned by William Reynish 2019-05-15 22:03:05 +02:00

Fairly sure this did work at some point?

Fairly sure this *did* work at some point?

Added subscriber: @zgorg

Added subscriber: @zgorg

Added subscriber: @AbidMaqbool

Added subscriber: @AbidMaqbool

Just to add more information to the proposed error/bug:

Redo operator fails for both Move & Scale operation weather executing with gizmo or directly through key-board in object and edit mode.

Redo operator then works in only those axis only which are modified with operation (e.g. other axis or proprieties not works in redo operator)

Demo:

Redo operator fails.gif

Rotate operator works correctly

Just to add more information to the proposed error/bug: Redo operator fails for both Move & Scale operation weather executing with gizmo or directly through key-board in object and edit mode. Redo operator then works in only those axis only which are modified with operation (e.g. other axis or proprieties not works in redo operator) Demo: ![Redo operator fails.gif](https://archive.blender.org/developer/F7080945/Redo_operator_fails.gif) Rotate operator works correctly

This was working, f889050aea caused this.

This was working, f889050aea caused this.

This issue was referenced by bfb05ee154

This issue was referenced by bfb05ee15462f83d5cc504e893bc991f067b5afe

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64669
No description provided.