Fix T64669: Redo transform fails with constrained axis